--- a/.github/workflows/k8s-cicd.yaml
+++ b/.github/workflows/k8s-cicd.yaml
@@ -34,41 +34,41 @@ jobs:
         run: |
           docker logout 
 # update helm repo with new image
-  # cd-job: 
-  #   needs: ci-job
-  #   runs-on: ubuntu-latest 
-  #   environment: HELM_ENV
-  #   steps: 
-  #     - name: Install yq command 
-  #       run: |
-  #         wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/local/bin/yq
-  #         chmod +x /usr/local/bin/yq
-  #     - name: Add Commit SHA to TAG env 
-  #       run: |
-  #         echo "TAG=${GITHUB_SHA::8}" >> $GITHUB_ENV
+  cd-job: 
+    needs: ci-job
+    runs-on: ubuntu-latest 
+    environment: HELM_ENV
+    steps: 
+      - name: Install yq command 
+        run: |
+          wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/local/bin/yq
+          chmod +x /usr/local/bin/yq
+      - name: Add Commit SHA to TAG env 
+        run: |
+          echo "TAG=${GITHUB_SHA::8}" >> $GITHUB_ENV
       
-  #     # clone the helm repo remporarily 
-  #     - name: Clone argocd repo 
-  #       run: | 
-  #         git clone https://github.com/${{ env.HELM_REPO }} helm_repo 
-  #     - name: Update Helm Chart 
-  #       run: |
-  #         cd helm_repo/reactjs-plants-chart
+      # clone the helm repo remporarily 
+      - name: Clone argocd repo 
+        run: | 
+          git clone https://github.com/${{ env.HELM_REPO }} helm_repo 
+      - name: Update Helm Chart 
+        run: |
+          cd helm_repo/reactjs-plants-chart
 
-  #         echo "Update repository username/imagename "
+          echo "Update repository username/imagename "
 
-  #         yq -i ".image.repository=\"${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME}}\"" values.yaml
+          yq -i ".image.repository=\"${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_IMAGE_NAME}}\"" values.yaml
 
-  #         echo "Update image tag "
-  #         yq -i ".image.tag=\"${{ env.TAG }}\"" values.yaml
+          echo "Update image tag "
+          yq -i ".image.tag=\"${{ env.TAG }}\"" values.yaml
 
-  #         git config --global user.email "username@example.com"
-  #         git config --global user.name "dummyname"
-  #         git add . 
-  #         git commit -m "Update helm to use image ${{ env.TAG }}"
+          git config --global user.email "username@example.com"
+          git config --global user.name "dummyname"
+          git add . 
+          git commit -m "Update helm to use image ${{ env.TAG }}"
           
-  #         git push https://${{ secrets.GIT_TOKEN }}@github.com/${{ env.HELM_REPO }}
+          git push https://${{ secrets.GIT_TOKEN }}@github.com/${{ env.HELM_REPO }}
       
-  #     - name: Clean up 
-  #       run: | 
-  #         rm -rf helm_repo
+      - name: Clean up 
+        run: | 
+          rm -rf helm_repo
